hh/vDSP.h

    /*  Define types:

            vDSP_Length for numbers of elements in arrays and for indices of
            elements in arrays.  (It is also used for the base-two logarithm of
            numbers of elements, although a much smaller type is suitable for
            that.)

            vDSP_Stride for differences of indices of elements (which of course
            includes strides).
    */
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = (C[n]*B[0] + A[n]) / (B[0] + 1);
*/

// Vector clip.
extern void vDSP_vclip(const float *__A, vDSP_Stride __IA, const float *__B,
                       const float *__C, float *__D, vDSP_Stride __ID,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vclipD(const double *__A, vDSP_Stride __IA, const double *__B,
                        const double *__C, double *__D, vDSP_Stride __ID,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
        {
            D[n] = A[n];
            if (D[n] < B[0]) D[n] = B[0];
            if (C[0] < D[n]) D[n] = C[0];
        }
*/

// Vector clip and count.
extern void vDSP_vclipc(const float *__A, vDSP_Stride __IA, const float *__B,
                        const float *__C, float *__D, vDSP_Stride __ID,
                        vDSP_Length __N, vDSP_Length *__NLow,
                        vDSP_Length *__NHigh)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vclipcD(const double *__A, vDSP_Stride __IA, const double *__B,
                         const double *__C, double *__D, vDSP_Stride __ID,
                         vDSP_Length __N, vDSP_Length *__NLow,
                         vDSP_Length *__NHigh)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            If n <= B[0],  then C[n] = A[0].
            If B[M-1] < n, then C[n] = A[M-1].
            Otherwise:
                Let m be such that B[m] < n <= B[m+1].
                C[n] = A[m] + (A[m+1]-A[m]) * (n-B[m]) / (B[m+1]-B[m]).

     The elements of B are expected to be in increasing order.
*/

// Vector inverted clip.
extern void vDSP_viclip(const float *__A, vDSP_Stride __IA, const float *__B,
                        const float *__C, float *__D, vDSP_Stride __ID,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_viclipD(const double *__A, vDSP_Stride __IA, const double *__B,
                         const double *__C, double *__D, vDSP_Stride __ID,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            D[n] = A[n] + C[0] * (B[n] - A[n]);
*/

// Vector test limit.
extern void vDSP_vlim(const float *__A, vDSP_Stride __IA, const float *__B,
                      const float *__C, float *__D, vDSP_Stride __ID,
                      vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vlimD(const double *__A, vDSP_Stride __IA, const double *__B,
                       const double *__C, double *__D, vDSP_Stride __ID,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
        {
            b = trunc(B[n]);
            a = B[n] - b;
            C[n] = A[b] + a * (A[b+1] - A[b]);
        }
*/

// Vector maxima.
extern void vDSP_vmax(const float *__A, vDSP_Stride __IA, const float *__B,
                      vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                      vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vmaxD(const double *__A, vDSP_Stride __IA, const double *__B,
                       vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = B[n] <= A[n] ? A[n] : B[n];
*/

// Vector maximum magnitude.
extern void vDSP_vmaxmg(const float *__A, vDSP_Stride __IA, const float *__B,
                        vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vmaxmgD(const double *__A, vDSP_Stride __IA, const double *__B,
                         vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute the maximum value within a window to the input vector.
    A maximum is calculated for each window position:

        for (n = 0; n < N; ++n)
            C[n] = the greatest value of A[w] for n <= w < n+WindowLength.

    A must contain N+WindowLength-1 elements, and C must contain space for
    N+WindowLength-1 elements.  Although only N outputs are provided in C,
    the additional elements may be used for intermediate computation.

    A and C may not overlap.

    WindowLength must be positive (zero is not supported).
*/

// Vector minima.
extern void vDSP_vmin(const float *__A, vDSP_Stride __IA, const float *__B,
                      vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                      vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vminD(const double *__A, vDSP_Stride __IA, const double *__B,
                       vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] <= B[n] ? A[n] : B[n];
*/

// Vector minimum magnitude.
extern void vDSP_vminmg(const float *__A, vDSP_Stride __IA, const float *__B,
                        vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vminmgD(const double *__A, vDSP_Stride __IA, const double *__B,
                         vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
        {
            p = S1[0] * A[n] + S2[0];
            if (p < 0)
                D[n] = C[0];
            else if (p < M-1)
            {
                q = trunc(p);
                r = p-q;
                D[n] = (1-r)*C[q] + r*C[q+1];
            }
            else
                D[n] = C[M-1];
        }
*/

// Vector threshold.
extern void vDSP_vthr(const float *__A, vDSP_Stride __IA, const float *__B,
                      float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vthrD(const double *__A, vDSP_Stride __IA, const double *__B,
                       double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            if (B[0] <= A[n])
                C[n] = A[n];
            else
                C[n] = B[0];
*/

// Vector threshold with zero fill.
extern void vDSP_vthres(const float *__A, vDSP_Stride __IA, const float *__B,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vthresD(const double *__A, vDSP_Stride __IA, const double *__B,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));